Update head.html inlinescript to use scripts-wdp.js

--- a/head.html
+++ b/head.html
@@ -2,4 +2,4 @@
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
-<inlinescript data-wdp='{"dep":"https://main--wknd-xwalk-westpac-test--abeheram.aem.live/scripts/scripts.js","fn":"wdp","prm":""}'></inlinescript>
+<inlinescript data-wdp='{"dep":"https://main--wknd-xwalk-westpac-test--abeheram.aem.live/scripts/scripts-wdp.js","fn":"wdp","prm":""}'></inlinescript>
