--- a/head.html
+++ b/head.html
@@ -2,4 +2,4 @@
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
-<inlinescript data-wdp="{dep:123}"></inlinescript>
+<inlinescript data-wdp="{&#39;dep&#39;:&#39;123&#39;}"></inlinescript>
