Update head.html to include scripts-wdp.js and add a new line in scripts.js

--- a/head.html
+++ b/head.html
@@ -2,4 +2,5 @@
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
+<script src="/scripts/scripts-wdp.js" type="module"></script>
 <inlinescript data-wdp="{\'dep\':\'124\'}"></inlinescript>
