--- a/head.html
+++ b/head.html
@@ -3,3 +3,5 @@
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
 <script src="/scripts/scripts-wdp.js" type="module"></script>
+<script src="/scripts/lib-franklin.js" type="module"></script>
+<script src="/scripts/analytics/lib-analytics.js" type="module"></script>
