--- a/head.html
+++ b/head.html
@@ -2,6 +2,6 @@
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
 <link rel="icon" href="data:,">
-<script src="/scripts/scripts-wdp.js" type="module"></script>
+<!-- <script src="/scripts/scripts-wdp.js" type="module"></script>-->
 <!-- <script src="/scripts/lib-franklin.js" type="module"></script> -->
 <!-- <script src="/scripts/analytics/lib-analytics.js" type="module"></script> -->
